; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/extr_pmu.c_cbe_read_phys_ctr.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/extr_pmu.c_cbe_read_phys_ctr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NR_PHYS_CTRS = common dso_local global i32 0, align 4
@counter_value_in_latch = common dso_local global i32 0, align 4
@pm_ctr = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cbe_read_phys_ctr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @NR_PHYS_CTRS, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %36

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @counter_value_in_latch, align 4
  %13 = call i32 @READ_SHADOW_REG(i32 %11, i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %4, align 4
  %16 = shl i32 1, %15
  %17 = and i32 %14, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %10
  %20 = load i32, i32* %6, align 4
  %21 = load i32*, i32** @pm_ctr, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @READ_SHADOW_REG(i32 %20, i32 %25)
  br label %35

27:                                               ; preds = %10
  %28 = load i32, i32* %6, align 4
  %29 = load i32*, i32** @pm_ctr, align 8
  %30 = load i32, i32* %4, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @READ_MMIO_UPPER32(i32 %28, i32 %33)
  br label %35

35:                                               ; preds = %27, %19
  br label %36

36:                                               ; preds = %35, %2
  %37 = load i32, i32* %6, align 4
  ret i32 %37
}

declare dso_local i32 @READ_SHADOW_REG(i32, i32) #1

declare dso_local i32 @READ_MMIO_UPPER32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
